--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "service": "app",
   "workspaceFolder": "/workspaces/logica",
   "remoteUser": "navila",
-  "initializeCommand": "chmod +x ./.devcontainer/init.sh && ./.devcontainer/init.sh",
+  "initializeCommand": "chmod +x ./.devcontainer/initialize.sh && ./.devcontainer/initialize.sh",
   "postStartCommand": "chmod +x ./.devcontainer/post_start.sh && ./.devcontainer/post_start.sh",
   "customizations": {
     "vscode": {
