fix: update Dockerfile to include pkg-config and add pre-commit configuration

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,8 @@ FROM mcr.microsoft.com/devcontainers/base:ubuntu-24.04
 RUN apt-get update && apt-get install -y \
   build-essential \
   curl \
-  wget
+  wget \
+  pkg-config
 
 # Install rust-analyzer (latest release)
 RUN curl -L https://github.com/rust-lang/rust-analyzer/releases/latest/download/rust-analyzer-$(uname -m)-unknown-linux-gnu.gz \
@@ -28,3 +29,6 @@ ENV PATH="/home/navila/.cargo/bin:${PATH}"
 # Finish Rust setup
 RUN rustup toolchain install stable \
  && rustup target add wasm32-unknown-unknown
+
+RUN cargo install cargo-tarpaulin
+RUN cargo install --locked --git https://github.com/j178/prek
