--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
-[package]
+[workspace]
+members = [
+    "crates/domain",
+    "crates/application",
+    "crates/infrastructure",
+    "crates/adapters",
+]
+
+[workspace.package]
 name = "rust-layers"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[workspace.dependencies]
 
 [workspace.lints.clippy]
 # Enforce correctness and best practices
